<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.RentSell"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <com.google.android.material.chip.ChipGroup-->
<!--        android:id="@+id/c11_sort_chips_group"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:singleSelection="true"-->
<!--        tools:ignore="MissingConstraints">-->
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical"-->
<!--            tools:ignore="MissingConstraints">-->

<!--            <com.google.android.material.chip.Chip-->
<!--                style="@style/Widget.MaterialComponents.Chip.Filter"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:chipCornerRadius="0dp"-->
<!--                android:text="Newest First" />-->

<!--            <com.google.android.material.chip.Chip-->
<!--                style="@style/Widget.MaterialComponents.Chip.Choice"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:checked="true"-->
<!--                android:text="Oldest First"-->
<!--                app:chipCornerRadius="0dp"/>-->


<!--            <com.google.android.material.chip.Chip-->
<!--                style="@style/Widget.MaterialComponents.Chip.Filter"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:chipCornerRadius="0dp"-->
<!--                android:padding="10dp"-->
<!--                android:text="Low to High Price" />-->

<!--            <com.google.android.material.chip.Chip-->
<!--                style="@style/Widget.MaterialComponents.Chip.Choice"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:chipCornerRadius="0dp"-->
<!--                android:text="Low to High Price" />-->


<!--        </LinearLayout>-->

<!--</com.google.android.material.chip.ChipGroup>-->

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
    android:orientation="vertical"
     tools:ignore="MissingConstraints">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_margin="5dp">

         <TextView
             android:layout_width="0dp"
             android:layout_weight="4"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:layout_marginTop="5dp"
             android:layout_marginLeft="10dp"
             android:fontFamily="sans-serif-black"
             android:text="@string/c11_sort_sort"
             android:textColor="?android:attr/textColorPrimary"
             android:textSize="25sp"
             android:textStyle="bold" />
         <ImageButton
             android:id="@+id/c11_sort_cancelBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/c11_cancel"
             android:backgroundTint="?android:attr/textColorPrimaryInverse"
             android:layout_gravity="right"
             android:layout_marginTop="5dp"
             android:layout_marginLeft="10dp" />

     </LinearLayout>


    <RadioGroup
        android:id="@+id/c11_sort_radioGroup"
        android:checkedButton="@+id/radio_button_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        tools:ignore="MissingConstraints">
        <RadioButton
            android:id="@+id/c11_sort_newest"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/c11_sort_newest"/>
        <RadioButton
            android:id="@+id/c11_sort_oldest"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/c11_sort_oldest"/>
        <RadioButton
            android:id="@+id/c11_sort_low_high"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/c11_sort_low_high"/>
        <RadioButton
            android:id="@+id/c11_sort_high_low"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/c11_sort_high_low"/>
    </RadioGroup>

 </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>