<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".C01"
    android:gravity="center_vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include
            android:id="@+id/c01_navbar"
            layout="@layout/c01_c02_c03_c04_navigation_bar"
            android:layout_alignParentTop="true"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>
        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@id/c01_navbar"
            android:background="?android:attr/textColorPrimaryInverse"
            android:scaleType="centerCrop"
            android:src="@drawable/c01_mobile_login_pic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/c11_four_rounded_corner2"
            android:orientation="vertical"
            android:layout_below="@+id/image">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/c01_login"
                android:textColor="@color/black"
                android:textSize="40dp"
                android:textStyle="bold"
                android:layout_margin="10dp"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/c01_editTextEmailLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="35dp"
                android:hint="@string/c01_email_phone"
                android:textColorHint="?android:attr/textColorPrimary"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/c01_c02_c03_c04_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/c01_editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="?android:attr/textColorPrimary"
                    android:layout_gravity="center" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/c01_editTextPasswordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="35dp"
                android:hint="@string/c01_password"
                android:textColorHint="?android:attr/textColorPrimary"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:errorEnabled="true"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/c01_c02_c03_c04_password_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/c01_editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textColor="?android:attr/textColorPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/c01_buttonForget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c01_forget_password"
                android:drawableLeft="@drawable/c01_info"
                android:drawableTint="?android:attr/colorPrimary"
                android:textColor="?android:attr/colorPrimary"
                android:layout_gravity="right"
                android:layout_marginRight="35dp"/>
            <Button
                android:id="@+id/c01_buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c01_sign_in"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="35dp"
                android:background="@drawable/c01_c02_c03_c04_c11_four_rounded_corner"
                android:elevation="20dp"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="OR"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="5dp"/>
            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:layout_gravity="center"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c01_do_not_have_account"
                    android:textSize="17sp"
                    android:textColor="?android:attr/textColorSecondary" />
                <TextView
                    android:id="@+id/c01_buttonRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c01_new_account"
                    android:textSize="17sp"
                    android:textColor="?android:attr/colorPrimary"
                    android:layout_gravity="center"/>

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</ScrollView>