<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".C04_cp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <include
            android:id="@+id/c01_navbar"
            layout="@layout/c01_c02_c03_c04_navigation_bar"
            android:layout_alignParentTop="true"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>
        <ImageView
            android:id="@+id/c04_cp_forgetPassImage"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@id/c01_navbar"
            android:background="@color/white"
            android:scaleType="fitCenter"
            android:src="@drawable/c04_cp_forget_password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:background="@drawable/c11_four_rounded_corner2"
            android:layout_below="@+id/c04_cp_forgetPassImage">

            <TextView
                android:id="@+id/c04_forget_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/c04_create_new"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="40dp"
                android:textStyle="bold"
                android:layout_margin="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/c04_editTextPasswordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="35dp"
                android:hint="@string/c04_cp_password"
                android:textColorHint="?android:attr/textColorPrimary"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:errorEnabled="true"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/c01_c02_c03_c04_password_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/c04_cp_editPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textColor="?android:attr/textColorPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/c04_editTextConfirmPasswordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="35dp"
                android:hint="@string/c04_cp_confirm_password"
                android:textColorHint="?android:attr/textColorPrimary"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:errorEnabled="true"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/c01_c02_c03_c04_password_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/c04_cp_cnfrm_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textColor="?android:attr/textColorPrimary"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <!--            <Button-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:id="@+id/c04_cp_confirm"-->
            <!--                android:layout_margin="20dp"-->
            <!--                android:paddingLeft="35dp"-->
            <!--                android:paddingBottom="10dp"-->
            <!--                android:paddingRight="35dp"-->
            <!--                android:paddingTop="10dp"-->
            <!--                android:background="@drawable/c01_c02_c03_c04_c11_four_rounded_corner"-->
            <!--                android:layout_gravity="center"-->
            <!--                android:text="@string/c04_cp_submit" />-->
            <Button
                android:id="@+id/c04_cp_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c04_cp_submit"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="35dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/c01_c02_c03_c04_c11_four_rounded_corner"
                android:elevation="20dp"
                android:layout_gravity="center" />


        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>